setup dashboard UI

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.drawer-side a.active{
+    color: white;
+    
+}
+.drawer-side a{
+    background-color: transparent;
+    font-size: 20px;
+    padding: 10 0px;
+    margin: 10px 0;
+    
+}
